Assignment for Lesson 5.1 completed and submitting for review

--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,19 @@ input {
   border-radius: 5px;
 }
 
+select {
+  height: 30px;
+  padding: 5px;
+  margin-top: 5px;
+  margin-left: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+option {
+  padding: 5px;
+}
+
 .nav-item {
   padding: 10px 15px;
   margin: 5px;
